workshop4/wp-deployment.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: wp-svc
  labels:
    app: wp-svc
spec:
  ports:
    - port: 80
      targetPort: 80
  selector:
    app: wp-pod
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wp-deploy
  labels:
    app: wp-deploy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: wp-pod
  strategy:
    type: Recreate
  template:
    metadata:
      name: wp-pod
      labels:
        app: wp-pod
    spec:
      containers:
      - image: wordpress:5.8
        name: wordpress-container
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 80
        volumeMounts:
        - name: wordpress-persistent-storage
          mountPath: /var/www/html
      volumes:
      - name: wordpress-persistent-storage
        persistentVolumeClaim:
          claimName: wp-pvc
